--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,6 @@ ol {
 }
 
 .search-form__fieldset {
-  max-height: 56px;
   display: flex;
   justify-items: start;
   flex-direction: column;
@@ -84,8 +83,8 @@ ol {
   min-width: 225px;
   appearance: none;
   background-color: transparent;
-  font-family: 'FiraSansCondesed', sans-serif;
-  border-width: 1px 0px;
+  font-family: 'FiraSansCondensed', sans-serif;
+  border-width: 1px;
   border-style: solid;
   font-size: 16px;
   line-height: 23px;
@@ -152,12 +151,12 @@ input[type='checkbox']:checked + span {
 }
 /*Кнопки-общее*/
 .button {
-  height: 34px;
+  min-height: 34px;
   width: 194px;
   cursor: pointer;
   border: 1px #fff solid;
   background-color: transparent;
-  font-family: 'FiraSansCondesed', sans-serif;
+  font-family: 'FiraSansCondensed', sans-serif;
   color: #fff;
   display: flex;
   align-items: center;
@@ -193,7 +192,6 @@ input[type='checkbox']:checked + span {
 /*Заголовок*/
 .title {
   max-width: 259px;
-  height: 210px;
   font-size: 75px;
   text-transform: uppercase;
   line-height: 94%;
@@ -273,7 +271,6 @@ input[type='checkbox']:checked + span {
 
 .content__video-card-title {
   max-width: 200px;
-  max-height: 101px;
   font-family: 'Oswald', sans-serif;
   font-size: 30px;
   font-weight: bold;
@@ -287,7 +284,7 @@ input[type='checkbox']:checked + span {
 
 /* Текст в карточках бокового меню */
 .content__video-card-description {
-  font-family: 'FiraSansCondesed', sans-serif;
+  font-family: 'FiraSansCondensed', sans-serif;
   font-size: 18px;
   line-height: 16.2px;
   inline-size: 200px;
